# transkeet

./: .gitignore  README.md  devbox.json  pyproject.toml  setup.py
src/transkeet/: app.py  config.py  transcriber.py
