[project]
name = "transkeet"
version = "0.1.0"
description = "macOS menu bar voice transcription using Parakeet TDT"
requires-python = ">=3.10"
dependencies = [
    "rumps>=0.4.0",
    "parakeet-mlx>=0.3.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "pynput>=1.7.0",
]

[project.scripts]
transkeet = "transkeet.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transkeet"]
